# im-making-tetris

./: .gitignore  CMakeLists.txt
inc/glad/: gl.h
inc/opengl/: shader_s.h
res/: 4.2.texture.fs
src/: main.cpp
src/glad/: gl.c
src/graphics/: bitmap.cpp  bitmap.h
